cmdb-core/src/main/java/com/webank/cmdb/express/antlr4/RouteQueryParser.java
// Generated from .\RouteQuery.g4 by ANTLR 4.8
package com.webank.cmdb.express.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RouteQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, TILDE=2, GT=3, DOT=4, LP=5, RP=6, DC=7, SC=8, DQM=9, BL=10, BR=11, 
		LSB=12, RSB=13, OP_EQ=14, OP_GT=15, OP_LT=16, OP_NE=17, OP_IN=18, OP_CTAN=19, 
		OP_NN=20, OP_NL=21, OPERATOR=22, STRING=23, NUMBER=24, BOOLEAN=25, ID=26, 
		PKG_ID=27, WS=28;
	public static final int
		RULE_route = 0, RULE_link = 1, RULE_fetch = 2, RULE_to = 3, RULE_by = 4, 
		RULE_fwd_node = 5, RULE_bwd_node = 6, RULE_entity_node = 7, RULE_entity = 8, 
		RULE_attr = 9, RULE_attr_array = 10, RULE_cond_array = 11, RULE_condition = 12, 
		RULE_array = 13, RULE_value = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"route", "link", "fetch", "to", "by", "fwd_node", "bwd_node", "entity_node", 
			"entity", "attr", "attr_array", "cond_array", "condition", "array", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'~'", "'>'", "'.'", "'('", "')'", null, "':'", null, "'{'", 
			"'}'", "'['", "']'", "'eq'", "'gt'", "'lt'", "'ne'", "'in'", "'contains'", 
			"'notNull'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "TILDE", "GT", "DOT", "LP", "RP", "DC", "SC", "DQM", "BL", 
			"BR", "LSB", "RSB", "OP_EQ", "OP_GT", "OP_LT", "OP_NE", "OP_IN", "OP_CTAN", 
			"OP_NN", "OP_NL", "OPERATOR", "STRING", "NUMBER", "BOOLEAN", "ID", "PKG_ID", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RouteQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RouteQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RouteContext extends ParserRuleContext {
		public RouteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_route; }
	 
		public RouteContext() { }
		public void copyFrom(RouteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EntityFetchContext extends RouteContext {
		public Entity_nodeContext entity_node() {
			return getRuleContext(Entity_nodeContext.class,0);
		}
		public FetchContext fetch() {
			return getRuleContext(FetchContext.class,0);
		}
		public EntityFetchContext(RouteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterEntityFetch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitEntityFetch(this);
		}
	}
	public static class LinkFetchContext extends RouteContext {
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public FetchContext fetch() {
			return getRuleContext(FetchContext.class,0);
		}
		public LinkFetchContext(RouteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterLinkFetch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitLinkFetch(this);
		}
	}

	public final RouteContext route() throws RecognitionException {
		RouteContext _localctx = new RouteContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_route);
		try {
			setState(36);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new LinkFetchContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				link(0);
				setState(31);
				fetch();
				}
				break;
			case 2:
				_localctx = new EntityFetchContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				entity_node();
				setState(34);
				fetch();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkContext extends ParserRuleContext {
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
	 
		public LinkContext() { }
		public void copyFrom(LinkContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LinkToEntityContext extends LinkContext {
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public TerminalNode DOT() { return getToken(RouteQueryParser.DOT, 0); }
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public ToContext to() {
			return getRuleContext(ToContext.class,0);
		}
		public Entity_nodeContext entity_node() {
			return getRuleContext(Entity_nodeContext.class,0);
		}
		public LinkToEntityContext(LinkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterLinkToEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitLinkToEntity(this);
		}
	}
	public static class FwdNodeToEntityContext extends LinkContext {
		public Fwd_nodeContext fwd_node() {
			return getRuleContext(Fwd_nodeContext.class,0);
		}
		public ToContext to() {
			return getRuleContext(ToContext.class,0);
		}
		public Entity_nodeContext entity_node() {
			return getRuleContext(Entity_nodeContext.class,0);
		}
		public FwdNodeToEntityContext(LinkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterFwdNodeToEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitFwdNodeToEntity(this);
		}
	}
	public static class LinkByBwdNodeContext extends LinkContext {
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public ByContext by() {
			return getRuleContext(ByContext.class,0);
		}
		public Bwd_nodeContext bwd_node() {
			return getRuleContext(Bwd_nodeContext.class,0);
		}
		public LinkByBwdNodeContext(LinkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterLinkByBwdNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitLinkByBwdNode(this);
		}
	}
	public static class EntityByBwdNodeContext extends LinkContext {
		public Entity_nodeContext entity_node() {
			return getRuleContext(Entity_nodeContext.class,0);
		}
		public ByContext by() {
			return getRuleContext(ByContext.class,0);
		}
		public Bwd_nodeContext bwd_node() {
			return getRuleContext(Bwd_nodeContext.class,0);
		}
		public EntityByBwdNodeContext(LinkContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterEntityByBwdNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitEntityByBwdNode(this);
		}
	}

	public final LinkContext link() throws RecognitionException {
		return link(0);
	}

	private LinkContext link(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LinkContext _localctx = new LinkContext(_ctx, _parentState);
		LinkContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_link, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				_localctx = new EntityByBwdNodeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(39);
				entity_node();
				setState(40);
				by();
				setState(41);
				bwd_node();
				}
				break;
			case 2:
				{
				_localctx = new FwdNodeToEntityContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(43);
				fwd_node();
				setState(44);
				to();
				setState(45);
				entity_node();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(59);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new LinkToEntityContext(new LinkContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_link);
						setState(49);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(50);
						match(DOT);
						setState(51);
						attr();
						setState(52);
						to();
						setState(53);
						entity_node();
						}
						break;
					case 2:
						{
						_localctx = new LinkByBwdNodeContext(new LinkContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_link);
						setState(55);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(56);
						by();
						setState(57);
						bwd_node();
						}
						break;
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FetchContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(RouteQueryParser.DOT, 0); }
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public Attr_arrayContext attr_array() {
			return getRuleContext(Attr_arrayContext.class,0);
		}
		public FetchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fetch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterFetch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitFetch(this);
		}
	}

	public final FetchContext fetch() throws RecognitionException {
		FetchContext _localctx = new FetchContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fetch);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(DOT);
				setState(65);
				attr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(DOT);
				setState(67);
				attr_array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToContext extends ParserRuleContext {
		public TerminalNode GT() { return getToken(RouteQueryParser.GT, 0); }
		public ToContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_to; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterTo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitTo(this);
		}
	}

	public final ToContext to() throws RecognitionException {
		ToContext _localctx = new ToContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_to);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ByContext extends ParserRuleContext {
		public TerminalNode TILDE() { return getToken(RouteQueryParser.TILDE, 0); }
		public ByContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_by; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterBy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitBy(this);
		}
	}

	public final ByContext by() throws RecognitionException {
		ByContext _localctx = new ByContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_by);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(TILDE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fwd_nodeContext extends ParserRuleContext {
		public Entity_nodeContext entity_node() {
			return getRuleContext(Entity_nodeContext.class,0);
		}
		public TerminalNode DOT() { return getToken(RouteQueryParser.DOT, 0); }
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public Fwd_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fwd_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterFwd_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitFwd_node(this);
		}
	}

	public final Fwd_nodeContext fwd_node() throws RecognitionException {
		Fwd_nodeContext _localctx = new Fwd_nodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fwd_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			entity_node();
			setState(75);
			match(DOT);
			setState(76);
			attr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bwd_nodeContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(RouteQueryParser.LP, 0); }
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public TerminalNode RP() { return getToken(RouteQueryParser.RP, 0); }
		public Entity_nodeContext entity_node() {
			return getRuleContext(Entity_nodeContext.class,0);
		}
		public Bwd_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bwd_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterBwd_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitBwd_node(this);
		}
	}

	public final Bwd_nodeContext bwd_node() throws RecognitionException {
		Bwd_nodeContext _localctx = new Bwd_nodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bwd_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(LP);
			setState(79);
			attr();
			setState(80);
			match(RP);
			setState(81);
			entity_node();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entity_nodeContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public Cond_arrayContext cond_array() {
			return getRuleContext(Cond_arrayContext.class,0);
		}
		public Entity_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterEntity_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitEntity_node(this);
		}
	}

	public final Entity_nodeContext entity_node() throws RecognitionException {
		Entity_nodeContext _localctx = new Entity_nodeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_entity_node);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				entity();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				entity();
				setState(85);
				condition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				entity();
				setState(88);
				cond_array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RouteQueryParser.ID, 0); }
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitEntity(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_entity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RouteQueryParser.ID, 0); }
		public AttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterAttr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitAttr(this);
		}
	}

	public final AttrContext attr() throws RecognitionException {
		AttrContext _localctx = new AttrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_arrayContext extends ParserRuleContext {
		public TerminalNode LSB() { return getToken(RouteQueryParser.LSB, 0); }
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public TerminalNode RSB() { return getToken(RouteQueryParser.RSB, 0); }
		public Attr_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterAttr_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitAttr_array(this);
		}
	}

	public final Attr_arrayContext attr_array() throws RecognitionException {
		Attr_arrayContext _localctx = new Attr_arrayContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attr_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(LSB);
			setState(97);
			attr();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(98);
				match(T__0);
				setState(99);
				attr();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cond_arrayContext extends ParserRuleContext {
		public TerminalNode LSB() { return getToken(RouteQueryParser.LSB, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode RSB() { return getToken(RouteQueryParser.RSB, 0); }
		public Cond_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).enterCond_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RouteQueryListener ) ((RouteQueryListener)listener).exitCond_array(this);
		}
	}

	public final Cond_arrayContext cond_array() throws RecognitionException {
		Cond_arrayContext _localctx = new Cond_arrayContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cond_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(LSB);
			setState(108);
			condition();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(109);
				match(T__0);
				setState(110);
				condition();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
